fix padding on mobile view

--- a/styles/FindHelp.module.css
+++ b/styles/FindHelp.module.css
@@ -53,6 +53,8 @@
     }
     .container h1 {
         font-size: 1.5rem;
+        padding: 1rem 0;
+        margin: 0;
     }
     
     .select_box {
